+ added switch case for single page website + fixed alignment for home page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -47,7 +47,7 @@ main {
 .profile-card {
   display: flex;
   min-width: 250px;
-  width: 50%;
+  max-width: 720px;
   margin: 1%;
   flex-direction: column;
   align-items: center;
